--- a/src/app/shared/select-target-modal/select-target-component.html
+++ b/src/app/shared/select-target-modal/select-target-component.html
@@ -49,7 +49,7 @@
 
 
         <div class="buttons-container">
-            <button class="btn-connect" [disabled]="targetNotSelected"
+            <button class="btn-connect" [disabled]="!targetNotSelected"
                     (click)="onGoToEditDrill()"> Continue
             </button>
         </div>
