--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -29,6 +29,11 @@
         <!--            <p>DRILL NAME</p>-->
         <!--            <h3>Surprise Drill - Standing</h3>-->
         <!--        </div>-->
+        <div class="drill-name-wrapper">
+            <span> DRILL NAME </span>
+            <input type="text" matInput placeholder="Enter Drill Name" [(ngModel)]="drill.name">
+        </div>
+
         <div class="basic-settings">
             <p class="red-title">BASIC SETTINGS</p>
 
