--- a/src/app/tabs/tabs.page.scss
+++ b/src/app/tabs/tabs.page.scss
@@ -1,5 +1,6 @@
 @import "../../assets/colors";
 
+
 ion-tab-bar {
   --background: white;
 }
@@ -146,3 +147,40 @@ div.icon {
 :host ::ng-deep mat-ink-bar {
   color: green !important;
 }
+
+
+.mat-tab-body {
+  animation: fade-out 0.5s;
+  opacity: 0;
+}
+
+.mat-tab-body.mat-tab-body-active {
+  animation: fade-in 0.5s;
+  opacity: 1;
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fade-out {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+
