--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -355,3 +355,27 @@ section.edit-drill {
   background-color: lightgray !important;
   color: black !important;
 }
+
+.drill-name-wrapper {
+  display: flex;
+  flex-direction: column;
+  padding-top: 30px;
+  padding-bottom: 10px;
+
+  span {
+    font-family: Roboto, serif;
+    font-size: 12px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.17;
+    letter-spacing: 1.88px;
+    text-align: left;
+    color: rgba(0, 0, 0, 0.87);
+  }
+
+  input {
+    border: none;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.49);
+  }
+}
