--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -700,9 +700,11 @@ div.row {
     flex-direction: column;
     width: 100%;
     height: 100%;
-    .content{
+
+    .content {
       margin-top: 50px;
     }
+
     label.image {
       width: 100%;
       display: flex;
@@ -1133,8 +1135,8 @@ div.row {
   }
 
   .avatar {
-    width: 80px;
-    height: 80px;
+    width: 100px;
+    height: 100px;
     position: absolute;
     bottom: -50px;
     border-radius: 100%;
@@ -1279,14 +1281,20 @@ div.row {
     align-items: center;
 
     .title {
+      width: 30%;
       margin-left: 16px;
+      font-size: 12px;
+      font-weight: normal;
+      line-height: 1.17;
+      letter-spacing: 1.88px;
+      color: rgba(0, 0, 0, 0.87);
     }
 
     .edit-mode {
       display: flex;
       justify-content: space-between;
       margin-left: 100px;
-      WIDTH: 100%;
+      WIDTH: 70%;
       margin-right: 16px;
 
       img {
