--- a/src/global.scss
+++ b/src/global.scss
@@ -47,7 +47,7 @@
 body, html {
   margin: 0;
   height: 100%;
-  font-family: 'Roboto', Arial, serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 .mat-expansion-panel {
@@ -183,11 +183,31 @@ mat-tab-header {
   height: 100% !important;
 }
 
-.mat-tab-body-wrapper{
+.mat-tab-body-wrapper {
   flex-grow: 1;
 }
 
-.mat-tab-group.mat-primary .mat-ink-bar, .mat-tab-nav-bar.mat-primary .mat-ink-bar{
+.mat-tab-group.mat-primary .mat-ink-bar, .mat-tab-nav-bar.mat-primary .mat-ink-bar {
   background: white;
   height: 0px;
+}
+
+
+.mat-tab-body.mat-tab-body-active {
+  animation: fadeInUp 0.6s;
+
+}
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 100%, 0);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
 }
