--- a/src/app/tab2/balistic-calculator/balistic-calculator.component.html
+++ b/src/app/tab2/balistic-calculator/balistic-calculator.component.html
@@ -19,7 +19,7 @@
                         data-name="Arrow" transform="translate(-703.01 -1151.99)" />
                 </g>
             </svg>
-            <p> Edit Drill</p>
+            <p> Balistic Calculator</p>
         </div>
     </header>
     <div *ngIf="isParamsScreen">
@@ -146,7 +146,7 @@
                 </div>
 
                 <div class="inputs">
-                    <input [(ngModel)]="dataModel.zeroRange" type="text">
+                    <input [(ngModel)]="dataModel.zeroRange" type="number">
                 </div>
             </div>
             <hr>
