--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -377,5 +377,23 @@ section.edit-drill {
   input {
     border: none;
     border-bottom: 1px solid rgba(128, 128, 128, 0.49);
+    height: 50px;
   }
+}
+
+button:disabled {
+  background-color: #929292 !important;
+}
+
+::placeholder {
+  color: #929292;
+  opacity: 1; /* Firefox */
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  color:#929292
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+  color:#929292
 }
