--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -106,7 +106,7 @@
                                 </g>
                             </g>
                         </svg>
-                        <p>CHOOSE TARGET:</p>
+                        <p>CHOOSE DRILL TYPE:</p>
                     </div>
                 </div>
             </div>
